# Robot-Simulation-environment

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.backend  Dockerfile.ui  Makefile  README.md  cursor_cursor_rule_creation_and_guideli.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  railway.json  railway.toml  requirements-optional.txt  requirements.txt
.trae/documents/: Fix Geometry Import and Navigation Plan.md  Fix Runtime Crash in Deployment.md  Implement Full RoboDK Integration & Hosting Setup.md  Set up Environment Variables.md
.vercel/: project.json
apps/agents/: __init__.py  planner.py  registry.py
apps/api/: Dockerfile  main.py  requirements.txt
apps/jobs/: __init__.py  celery_app.py  state.py  tasks.py
apps/sim/: design_store.py  main.py  requirements.txt  robodk_bridge.py
apps/web/: Dockerfile  next.config.js  package-lock.json  package.json
assets/: design_export.urdf  test_design.urdf
assets/uploads/: ABB CRB 1300-7_1.4.stl
contracts/: README.md
contracts/v1/: metrics.json  reality_profile.json  (+2 more)
docs/: DEPLOY.md  ROBODK_INTEGRATION.md  api.md  architecture.md  contributing.md  cursor_skills_commands.md  deploy.md  evaluation.md  qers_mvp_summary.md  qers_spec_reference.md  research_context_and_next_phase.md  security.md  sim2real_playbook.md  simulation_contracts.md
examples/: simple_robot.urdf
qers/: __init__.py  demo.py
scripts/: entrypoint_backend.sh  entrypoint_ui.sh  entrypoint_worker.sh  healthcheck.sh  test_open_lib.py  test_rdk_load.py  test_slash_import.py  verify-api.sh
(+547 files in other folders)
